2003-10-10  Derek Price  <derek@ximbiot.com>

	* server.c (cvs_output, cvs_outerr): Protect calls to syslog()
	with the usual preprocessor condition: HAVE_SYSLOG_H.
	(Original patch from Terrence Enger <tenger@iSeries-guru.com>.)

2003-10-09  Derek Price  <derek@ximbiot.com>

	* cvs.h: s/^extern// off of function declarations per HACKING.

2003-10-08  Derek Price  <derek@ximbiot.com>

	* Makefile.am (cvs_SOURCES): Add history.h.
	* history.c: Include history.h.  Add the `P' record types to more
	comments. s/ALL_REC_TYPES/ALL_HISTORY_REC_TYPES/.
	(usage): Reference ALL_HISTORY_REC_TYPES rather than using a separate
	string literal.
	(report_hrecs): Handle `P' record type.
	(ALL_REC_TYPES): Rename and move...
	* history.h (ALL_HISTORY_REC_TYPES): ...here.
	* mkmodules.c: Include history.h.
	(config_contents): Update contents of and references to LogHistory
	records to use ALL_HISTORY_REC_TYPES.
	* sanity.sh (basic2-64): Update to include history records of type `P'.

	* Makefile.in: Regenerated.

2003-10-08  Derek Price  <derek@ximbiot.com>

	* update.c (patch_file): Correct spelling and punctuation in comment.
	Update some lines to fit in 80 characters.

2003-10-08  Derek Price  <derek@ximbiot.com>

	* lock.c (remove_locks): Copy global struct and set status variable to
	NULL before calling disposal functions that might try to access it
	during calls to error(1,...).

2003-10-08  Larry Jones  <lawrence.jones@eds.com>

	* history.c (history): Don't conflate -e with -x since the client's
	idea of what -e means may not match the server's.
	(Reported by Frank Hemer <frank@hemer.org>.)

2003-10-08  Derek Price  <derek@ximbiot.com>

	* lock.c (Lock_Cleanup), rcs.c (rcs_cleanup), server.c
	(server_cleanup): Expand comments about the never_run_again variable
	and its interoperation with critical sections, exit, and interrupts.

2003-10-08  Derek Price  <derek@ximbiot.com>

	* lock.c (remove_locks): Reduce TRACE level since this function is